# devxos-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
devxos/: cli.py  i18n.py  org_runner.py
devxos/analysis/: acceptance_rate.py  activity_timeline.py  adoption_detector.py  attribution_gap.py  author_velocity.py  cascade_detector.py  churn_calculator.py  churn_detail.py  code_provenance.py  commit_shape.py  duplicate_detector.py  durability.py  fix_latency.py  intent_classifier.py  intent_metrics.py  move_detector.py  new_code_churn.py  operation_classifier.py  org_intelligence.py  origin_classifier.py  origin_funnel.py  origin_metrics.py  pr_lifecycle.py  priming_detector.py  revert_detector.py  stability_map.py  trend_delta.py  velocity.py
devxos/hooks/: manager.py  post_commit_push.sh  prepare_commit_msg.sh
devxos/ingestion/: diff_reader.py  git_reader.py  github_reader.py
devxos/metrics/: aggregator.py  stabilization.py
devxos/models/: adoption.py  commit.py  commit_shape.py  context.py  fix_latency.py  intent.py  metrics.py  org.py  pull_request.py  trend.py  velocity.py
devxos/platform/: auth.py  config.py  push.py  telemetry.py
devxos/reports/: narrative.py  org_writer.py  writer.py
examples/: sample-org-findings.md  sample-report.md
install/: install.ps1  install.sh
